változások(reg.gomb törlés,"db" hozzáad., center)

--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -35,7 +35,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" routerLink="/signup">Regisztráció</a>
+                <a *ngIf="!loggedInUser" class="nav-link text-white" routerLink="/signup">Regisztráció</a>
             </li>
         </ul>
         </div>
