--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="main_component">
-    <div class="div-flex">
+    <div class="div-flex centered-container">
         <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
             <h1>Fiók regisztrálása!</h1>
             <mat-form-field>
