--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,7 +2,7 @@
     <mat-spinner></mat-spinner>
 </span>
 
-<div class="main_component">
+<div class="main_component centered-container">
     <mat-form-field>
         <mat-icon matPrefix>email</mat-icon>
         <mat-label for="email">Email cím: </mat-label><input matInput type="text" [formControl]="email" required/>
