--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,8 +1,8 @@
-<span class="loading-indicator" *ngIf="loading">
+<!--<span class="loading-indicator" *ngIf="loading">
     <mat-spinner></mat-spinner>
-</span>
+</span>-->
 
-<div class="main_component centered-container">
+<div class="centered-container">
     <mat-form-field>
         <mat-icon matPrefix>email</mat-icon>
         <mat-label for="email">Email cím: </mat-label><input matInput type="text" [formControl]="email" required/>
