--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,7 +7,8 @@
         <mat-icon matPrefix>email</mat-icon>
         <mat-label for="email">Email cím: </mat-label><input matInput type="text" [formControl]="email" required (input)="checkNameFields()"/>
     </mat-form-field>
-    <span class="error text-danger"  *ngIf="email?.invalid && email?.touched">Az email cím érvénytelen!</span>
+    <span *ngIf="email.value.length === 0 && email?.touched" class="text-danger"> Email cím megadása kötelező!</span>
+    <span class="error text-danger"  *ngIf="email?.invalid && email?.touched && email.value.length > 0">Az email cím érvénytelen!</span>
     <mat-form-field>
         <mat-icon matPrefix>vpn_key</mat-icon>
         <mat-label for="password">Jelszó: </mat-label>
@@ -16,9 +17,8 @@
             {{showPassword?'visibility_off':'visibility'}}
         </mat-icon>
     </mat-form-field>
-    <!--<div *ngIf="password.length < 1" class="text-danger">
-        Jelszómegadása kötelező!
-    </div>--> 
+    <span *ngIf="password.value.length === 0 && password?.touched" class="text-danger"> Jelszó megadása kötelező!</span>
+    <span *ngIf="password.value.length >= 1 && password.value.length <= 5 && password?.touched" class="text-danger"> Jelszónak minimum 6 karakter hosszúnak kell lenni!</span>
     <span>
         <span><button mat-raised-button class="btn btn-success" (click)="loginnew()" [disabled]="!registrationAllowed">Belépés</button></span>
         <span><button mat-raised-button class="btn btn-success" [routerLink]="'/signup'">Regisztráció</button></span>
