--- a/src/app/pages/storage/storage.component.html
+++ b/src/app/pages/storage/storage.component.html
@@ -23,6 +23,8 @@
                                         </ul>
                                 </div>
                                 <div class="part-2" class="col-md-8 col-lg-6">
+                                        <div class="product-image" [ngStyle]="{'background-image': 'url(' + product.image_url + ')'}"></div>
+                                        <h3 class="product-title">{{ product.image_url }}</h3>
                                         <h3 class="product-title">{{ product.title }}</h3>
                                         <h3 class="product-title">{{ product.quantity}} {{product.unit}}</h3>
                                 </div>
