--- a/src/app/pages/storage/storage.component.html
+++ b/src/app/pages/storage/storage.component.html
@@ -15,7 +15,7 @@
     <div id="page-content-wrapper">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6 col-lg-3 col-xl-2" *ngFor="let product of filteredProducts">
+                <div class="col-md-6 col-lg-3 col-xl-2" *ngFor="let product of filteredProducts; let i = index">
                         <div id="product-1" class="single-product">
                                 <div class="part-1">
                                         <ul>
@@ -23,7 +23,7 @@
                                         </ul>
                                 </div>
                                 <div class="part-2" class="col-md-8 col-lg-6">
-                                        <div class="product-image" [ngStyle]="{'background-image': 'url(' + product.image_url + ')'}"></div>
+                                        <div class="product-image" [ngStyle]="{'background-image': 'url(' + productImages[i] + ')'}"></div>
                                         <h3 class="product-title">{{ product.image_url }}</h3>
                                         <h3 class="product-title">{{ product.title }}</h3>
                                         <h3 class="product-title">{{ product.quantity}} {{product.unit}}</h3>
