--- a/src/app/pages/storage-item/storage-item.component.html
+++ b/src/app/pages/storage-item/storage-item.component.html
@@ -6,7 +6,7 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content class="dashboard-card-content">
-      <img class="center" src="../../../assets/grocery.jpg" />
+      <img class="center" src="{{ product.image_url }}" />
     <div class="top">
         <div class="element">
         <p>Otthon található mennyiség: </p>
