--- a/src/app/pages/storage/storage.component.html
+++ b/src/app/pages/storage/storage.component.html
@@ -15,18 +15,17 @@
     <div id="page-content-wrapper">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6 col-lg-3 col-xl-2" *ngFor="let product of filteredProducts; let i = index">
+                <div class="col-md-6 col-lg-3 col-xl-2 kepmid" *ngFor="let product of filteredProducts; let i = index">
                         <div id="product-1" class="single-product">
-                                <div class="part-1">
-                                        <ul>
+                                <div class="part-1">    
+                                        <ul class="part-1">
                                                 <li><a (click)="getProductsId(product)"><mat-icon>open_in_new</mat-icon></a></li>
                                         </ul>
-                                </div>
-                                <div class="part-2" class="col-md-8 col-lg-6">
-                                        <div class="product-image" *ngIf="productImages[i]" [ngStyle]="{'background-image': 'url(' + productImages[i] + ')'}"></div>
-                                        <h3 class="product-title">{{ product.image_url }}</h3>
-                                        <h3 class="product-title">{{ product.title }}</h3>
-                                        <h3 class="product-title">{{ product.quantity}} {{product.unit}}</h3>
+                                        <div class="part-2" class="col-md-8 col-lg-6 tower">
+                                                <div><img class="product-image eiffel" src="{{ product.image_url}}" alt="Product Image"/></div>
+                                                <h3 class="product-title">{{ product.title }}</h3>
+                                                <h3 class="product-title">{{ product.quantity}} {{product.unit}}</h3>
+                                        </div>
                                 </div>
                         </div>
                 </div>
