--- a/src/app/pages/storage/storage.component.css
+++ b/src/app/pages/storage/storage.component.css
@@ -187,7 +187,7 @@ h3, h4 {
 
 .search {
     margin-right: 320px;
-    border: 3px solid black;
+    border: 3px solid #198754;
     width: 300px;
     outline: none;
 }
