--- a/src/app/pages/budget/budget.component.html
+++ b/src/app/pages/budget/budget.component.html
@@ -10,3 +10,9 @@
       </tr>
     </table>
 </div>
+
+<div>
+  <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>    
+</div> 
+
+<div id="columnChartContainer" style="height: 370px; width: 100%;"></div>
