--- a/src/app/pages/budget/budget.component.html
+++ b/src/app/pages/budget/budget.component.html
@@ -6,7 +6,8 @@
       </tr>
       <tr *ngFor="let cost of sortedData">
         <td>{{ cost.category }}</td>
-        <td>{{ cost.price | currency: 'HUF' }}</td>
+        <td>{{ cost.price | currency: 'HUF' :'symbol':'3.0' }}</td>
+        <td><mat-icon (click)="delete(cost.id)" >delete</mat-icon></td>
       </tr>
     </table>
 </div>
