--- a/src/app/pages/budget/budget.component.html
+++ b/src/app/pages/budget/budget.component.html
@@ -3,11 +3,12 @@
       <tr class="header-row">
         <th mat-sort-header="category">Kategória</th>
         <th mat-sort-header="price">Ár</th>
+        <th><mat-icon (click)="openBudgetAddDialog()" matTooltip="Kiadás hozzáadása">add_box</mat-icon></th>
       </tr>
       <tr *ngFor="let cost of sortedData">
         <td>{{ cost.category }}</td>
-        <td>{{ cost.price | currency: 'HUF' :'symbol':'3.0' }}</td>
-        <td><mat-icon (click)="delete(cost.id)" >delete</mat-icon></td>
+        <td>{{ cost.price | currency: 'HUF' :'symbol':'1.0' }}</td>
+        <td><mat-icon (click)="delete(cost)" matTooltip="Kiadás törlése">delete</mat-icon></td>
       </tr>
     </table>
 </div>
