--- a/src/app/pages/budget-add/budget-add.component.html
+++ b/src/app/pages/budget-add/budget-add.component.html
@@ -4,7 +4,7 @@
         <form [formGroup]="createCostsForm" novalidate class="example-container">
             <mat-form-field>
                 <mat-icon matPrefix>euro_symboly</mat-icon>
-                <mat-label  for="title">Ár megadása: </mat-label>
+                <mat-label class="bot" for="title">Ár megadása: </mat-label>
                 <div class="currency-input-wrapper">
                     <span class="currency-label">HUF</span>
                     <input matInput type="number" class="line" formControlName="price" required>
@@ -26,7 +26,7 @@
                 </div>
             </mat-form-field>
             <mat-card-actions>
-                <button mat-raised-button type="button" (click)="onSubmit()" [disabled]="!createCostsForm.valid" [routerLink]="'/budget'">Elem hozzáadása</button>
+                <button mat-raised-button type="button" (click)="onSubmit()" [disabled]="!createCostsForm.valid" [routerLink]="'/budget'">Kiadás hozzáadása</button>
             </mat-card-actions>
         </form>
     </div>
