--- a/src/app/pages/budget/budget.component.css
+++ b/src/app/pages/budget/budget.component.css
@@ -69,6 +69,17 @@ tr {
     width: 20px;
 }
 
+.chart-container {
+    display: flex;
+    justify-content: space-between; /* Adjust as needed */
+    flex-wrap: wrap;
+    padding-top: 40px;
+  }
+  
+  canvasjs-chart {
+    flex: 1; /* This will make each chart take up 50% of the container width */
+  }
+
 td:last-child {
     max-width: 7px;
 }
