--- a/src/app/pages/budget/budget.component.html
+++ b/src/app/pages/budget/budget.component.html
@@ -13,10 +13,7 @@
     </table>
 </div>
 
-<div>
-  <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>    
-</div> 
-
-<div>
-  <canvasjs-chart [options]="columnChartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>    
-</div> 
+<div class="chart-container">
+  <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>
+  <canvasjs-chart [options]="columnChartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>     
+</div>
