Kiadásfigyelő oldal kész

--- a/src/app/pages/budget-add/budget-add.component.html
+++ b/src/app/pages/budget-add/budget-add.component.html
@@ -25,6 +25,11 @@
                     Kategória megadása kötelező!
                 </div>
             </mat-form-field>
+            <mat-form-field>
+                <mat-icon matPrefix>bookmark</mat-icon>
+                <mat-label for="user_id">Felhasználó id-je: </mat-label>
+                <input matInput type="text" class="line color" formControlName="user_id" [(ngModel)]="valami" readonly>
+            </mat-form-field>
             <mat-card-actions>
                 <button mat-raised-button type="button" (click)="onSubmit()" [disabled]="!createCostsForm.valid" [routerLink]="'/budget'">Kiadás hozzáadása</button>
             </mat-card-actions>
