--- a/src/app/pages/shopping-list/shopping-list.component.html
+++ b/src/app/pages/shopping-list/shopping-list.component.html
@@ -24,7 +24,7 @@
                                     </mat-icon>
                                     <span class="visible" (click)="goBack()">Vissza</span>
                                 </td>
-                            </tr>
+                            </tr>                                                                                 
                             <tr *ngFor="let subcategory of selectedSubcategory.subcategories; let i = index">
                             <td>{{ subcategory }}</td>
                             <td class="icon-container">
@@ -44,18 +44,21 @@
                 </td>
                 <td class="halftwo">
                     <div class="scroll">
-                    <table class="teljes">
-                        <tr *ngFor="let item of shoppinglist; let i = index" [class.checked]="checkedItems.has(i)">
-                            <td>
-                                <span [class.checked-text]="checkedItems.has(i)">{{ item.name }}({{ item.quantity }})</span>
-                            </td>
-                            <td class="vertical-align-middle">
-                                <input type="checkbox" (change)="toggleItem(i)" [checked]="item.checked">
-                                <mat-icon (click)="delete(item.id)" matTooltip="Elem törlése" *ngIf="checkedItems.has(i)">delete</mat-icon>
-                            </td>
-                        </tr>                    
-                    </table>
-                </div>
+                        <table class="teljes">
+                            <tr *ngFor="let item of shoppinglist; let i = index" [class.checked]="checkedItems.has(i)">
+                                <td>
+                                    <span [class.checked-text]="checkedItems.has(i)">{{ item.name }}({{ item.quantity }})</span>
+                                </td>
+                                <td class="vertical-align-middle icon-container">
+                                    <input type="checkbox" (change)="toggleItem(i)" [checked]="item.checked">
+                                    <mat-icon (click)="delete(item.id)" matTooltip="Elem törlése" *ngIf="checkedItems.has(i)">delete</mat-icon>
+                                </td>
+                            </tr>
+                            <tr class="noborder">
+                                <button class="vertical-align-middle" (click)="deleteCheckedItems()">Összes kijelölt elem törlése<mat-icon>delete</mat-icon></button>
+                            </tr>                    
+                        </table>
+                    </div>
                 </td>
             </tr>
         </table>
